fix(docs): corrected title format.

--- a/docs/blog/2025-01-25-netlify-browserstack-blog/index.mdx
+++ b/docs/blog/2025-01-25-netlify-browserstack-blog/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: netlify-browserstack-sponsorship
-title: Exciting News: Netlify and BrowserStack Join as Sponsors! 🎉
+title: "Exciting News: Netlify and BrowserStack Join as Sponsors! 🎉"
 authors: [yadong]
 tags: [Sponsorships, Netlify, BrowserStack]
 ---
